--- a/package.json
+++ b/package.json
@@ -4,25 +4,30 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
+    "@reduxjs/toolkit": "^1.8.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.1",
     "@types/node": "^16.11.36",
     "@types/react": "^18.0.9",
+    "@types/react-credit-cards": "^0.8.1",
     "@types/react-dom": "^18.0.4",
     "@types/react-redux": "^7.1.24",
     "@types/react-router-dom": "^5.3.3",
     "antd": "^4.20.6",
     "axios": "^0.27.2",
     "i18next": "^21.8.4",
+    "jwt-decode": "^3.1.2",
     "react": "^17.0.1",
+    "react-credit-cards": "^0.8.3",
     "react-dom": "^17.0.1",
     "react-i18next": "^11.16.9",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
     "typescript": "^4.6.4",
     "web-vitals": "^2.1.4"
